test/analyze/type_check/anonymous_function/implicit_trait_type_params.myte
module test

trait Trait {}

fun paramTypes() {
  fn (x: Trait) {};
  fn (x: Option<Trait>) {};
}

fun returnTypes() {
  fn (): Trait {};
  fn (): Option<Trait> {};
}

fun main() {}